fixed the spacing on the recipe search

--- a/app/assets/stylesheets/base_styles.scss
+++ b/app/assets/stylesheets/base_styles.scss
@@ -99,3 +99,7 @@ h6 {
 .user-inputs {
 	margin-top: 2em;
 }
+
+.sign-in-box {
+	margin-top: 2em;
+}
